# code

./: README.md  a.out  hello.c  sqList.c
51_std/2-1 点亮一个LED/: main.c  t1.uvgui.27953  t1.uvopt  t1.uvproj
51_std/2-2 LDE闪烁/: main.c  project.uvgui.27953  project.uvproj
51_std/2-3 LED流水灯/: Project.uvgui.27953  Project.uvproj  (+1 more)
C/: #,##与可变参数.c  #与可变参数.c  Hello world.cpp  ant.c  hello.c  memcpy方法 内存扩容.c  memset初始化内存空间.c  memset（string.h）初始化内存空间.c  realloc动态扩容（存储位置在堆中）.c  register存储类型.c  static存储类型.c  typedef(简化类型声明).c  typedef(简化类型声明)函数指针.c  typedef(简化类型声明)复杂.c  typedef.c  以函数指针为参数的函数.c  以函数指针为返回值的函数.c  以函数指针作为返回值.c  传递指向结构体变量的指针(储存到内存中).c  传递指向结构体变量的指针.c  传递结构体变量.c  传递结构体变量（test）.c  位域.c  使用函数指针的简易计算器.c  全局变量.c  共用体union.c  内存布局练习.c  内联函数.c  内联函数（inline）.c  函数指针.c  函数指针作为参数.c  堆和栈的发展方向.c  堆的生存周期（由动态申请到主动释放为止，不同函数间可自由访问）.c  带参数的宏定义.c  快速排序.c  指向指针的指针.c  指针与数组  指针与数组.c  指针函数.c  指针数组与指向指针的指针.c  (+15 more)
C++std/: C++的类和对象.cpp  作用域运算符.cpp  函数模板.cpp  未命名1
algorithm/: test  test.cpp  堆.c  对数器模板.c  异或交换变量值.c  归并排序.c  归并排序练习.c  找出两个出现奇数次的数.c  暴力枚举1.c  未命名3.c  钞票.cpp  高精度加.c  高精度加test.c
armStd/: a.out  hello.c  hello.s
cpp/: Facade.cpp  Rectangle.cpp  a.out  constTest.cpp  factoryPen.cpp
java/: .RedPencore.java.swp  Order.java  PenCore.java  test1.java
linux_high_level/: client  client.c  server  server.c
python/: python_for.py  test02_variable.py  test03_ifelse.py  test04_loop.py  test05_funcion.py  test06_import.py
ros2Std/town_ws/src/village_wang/: CMakeLists.txt  package.xml
ros2Std/town_ws/src/village_wang/src/: .wang2.cpp.swp  wang2.cpp  wang2_oop.cpp  wang2_pop.cpp
(+612 files in other folders)
